# CRUD_users

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
static/css/: style.css
templates/: base.html  create_user.html  delete_user.html  list_users.html  navbar.html  pagination.html  user.html
templates/registration/: login.html
templates/users/: create_user.html  delete_user.html  list_users.html  user.html
tests/: test_model.py  test_urls.py  test_views.py
usercrud/: settings.py  urls.py  wsgi.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_auto_20190628_1526.py  0003_customuser_bio.py
