[tool.poetry]
name = "crud_users"
version = "0.1.0"
description = ""
authors = ["wilfredinni <carlos.w.montecinos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
django-widget-tweaks = "^1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
